oxiplate-derive/tests/broken/extends/extends-after-writ.stderr
error: Unexpected 'extends' statement after content already present in template
 --> tests/broken/extends/extends-after-writ.rs:4:36
  |
4 | #[oxiplate_inline(r#"{{ title }}{% extends "multiple-blocks.html.oxip" %}"#)]
  |                                    ^^^^^^^
